End of Section 2

--- a/FirstNZWalks/FirstNZWalks.API/appsettings.json
+++ b/FirstNZWalks/FirstNZWalks.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "NZWalks": "Server=localhost\\MSSQLSERVER04;Database=NZWalksDb;Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=true"
+  }
 }
